--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Dropdown
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="https://github.com/Michele-Piazzolla-2CIT/TPSIT/blob/main/E3.html">Esercizio 3</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
