--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Esercizi
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/E3.html">Esercizio 3</a></li>
