--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Esercizi
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://github.com/Michele-Piazzolla-2CIT/TPSIT/E3.html">Esercizio 3</a></li>
+            <li><a class="dropdown-item" href="https://gabriele-tedesco.github.io/gabrieletedescotpsit/gabrielemoveimage.html">Esercizio 3</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
