--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/E3.html">Esercizio 3</a></li>
             
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/FlipCard.html">FlipCard</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/MathRandom(1).html">MathRandom</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/MuoviImmagine.html">MuoviImmagine</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/NumeriRandom.html">NumeriRandom</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/Tabelline.html">Tabelline</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/E3.html">Esercizio 3</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/E3.html">Esercizio 3</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/FlipCard.html">FlipCard</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MathRandom(1).html">MathRandom</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MuoviImmagine.html">MuoviImmagine</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/NumeriRandom.html">NumeriRandom</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Tabelline.html">Tabelline</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/E3.html">Esercizio 3</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/E3.html">Esercizio 3</a></li>
             
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
