--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Grafiche
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/E3.html">Esercizio 3</a></li> 
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/FlipCard.html">FlipCard</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MathRandom(1).html">MathRandom</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MuoviImmagine.html">MuoviImmagine</a></li>
+
+            
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Esercizi
           </a>
           <ul class="dropdown-menu">
@@ -40,7 +53,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
-        </li>
+        </li>        
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
