--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/NumeriRandom.html">NumeriRandom</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Tabelline.html">Tabelline</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/trasformatoreKW.html">trasformatore KW</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Bar.html">Bar Drink</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Sumo.html">Sumo Game</a></li>
 
             
             <li><hr class="dropdown-divider"></li>
