--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica2(Div).html">Grafica 2</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica3(Scacchiera).html">Grafica 3</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica4(10x10).html">Grafica 4</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica5.html">Grafica 5</a></li>
 
           </ul>
         </li>
