--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/E3.html">Esercizio 3</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/esercizi-for.html">Esercizi FOR</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/FlipCard.html">FlipCard</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MathRandom(1).html">MathRandom</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MathRandom.html">MathRandom</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MuoviImmagine.html">MuoviImmagine</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/NumeriRandom.html">NumeriRandom</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Tabelline.html">Tabelline</a></li>
