--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Bar.html">Bar Drink</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Sumo.html">Sumo Game</a></li>
             <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/sushi.html">Sushi Bar</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/FrasiSimpatiche.html">Frasi Simpatiche</a></li>
 
             
             <li><hr class="dropdown-divider"></li>
