--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             Grafiche
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/Grafica1(quadrati).html">Grafica 1</a></li> 
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica2(Div).html">Grafica 2</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica3(Scacchiera).html">Grafica 3</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica4(10x10).html">Grafica 4</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Grafica5.html">Grafica 5</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/Grafica1(quadrati).html">Grafica 1</a></li> 
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/Grafica2(Div).html">Grafica 2</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/Grafica3(Scacchiera).html">Grafica 3</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/Grafica4(10x10).html">Grafica 4</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/Grafica5.html">Grafica 5</a></li>
 
           </ul>
         </li>
@@ -39,19 +39,18 @@
             Esercizi
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/E3.html">Esercizio 3</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/esercizi-for.html">Esercizi FOR</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/FlipCard.html">FlipCard</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MathRandom.html">MathRandom</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/MuoviImmagine.html">MuoviImmagine</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/NumeriRandom.html">NumeriRandom</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Tabelline.html">Tabelline</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/trasformatoreKW.html">trasformatore KW</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Bar.html">Bar Drink</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/Sumo.html">Sumo Game</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/sushi.html">Sushi Bar</a></li>
-            <li><a class="dropdown-item" href="https://michele-piazzolla-2cit.github.io/TPSIT/replit/FrasiSimpatiche.html">Frasi Simpatiche</a></li>
-
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/E3.html">Esercizio 3</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/esercizi-for.html">Esercizi FOR</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/FlipCard.html">FlipCard</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/MathRandom.html">MathRandom</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/MuoviImmagine.html">MuoviImmagine</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/NumeriRandom.html">NumeriRandom</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/Tabelline.html">Tabelline</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/trasformatoreKW.html">trasformatore KW</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/Bar.html">Bar Drink</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/Sumo.html">Sumo Game</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io/TPSIT/replit/sushi.html">Sushi Bar</a></li>
+            <li><a class="dropdown-item" href="https://michele-piazzolla.github.io
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
