--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/Sumo.html">Sumo Game</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/sushi.html">Sushi Bar</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/FrasiSimpatiche.html">Frasi Simpatiche</a></li>
+            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/bar-v1.html">Bar Drink 2.0</a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
