--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/Grafica3(Scacchiera).html">Grafica 3</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/Grafica4(10x10).html">Grafica 4</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/Grafica5.html">Grafica 5</a></li>
+            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/VM18.html">ALLERT pagina Viateta ai minorenni</a></li>
 
           </ul>
         </li>
@@ -52,7 +53,7 @@
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/sushi.html">Sushi Bar</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/FrasiSimpatiche.html">Frasi Simpatiche</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/bar-v1.html">Bar Drink 2.0</a></li>
-            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/bar-v1.html">Frasi Simpatiche (NSFW)</a></li>
+            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/VM18.html">Frasi Simpatiche (NSFW)</a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
