--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/FrasiSimpatiche.html">Frasi Simpatiche</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/bar-v1.html">Bar Drink 2.0</a></li>
             <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/VM18.html">Frasi Simpatiche (NSFW)</a></li>
+li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/AnalisiNumerica.html">Analisi Numerica</a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
