--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
      
           </ul>
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Esercizi
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/Canvas con 100 punti consecutivi.html">Canvas con 100 punti consecutivi</a></li>
+            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/Canvas con 1000 punti con numeri primi.html">Canvas con 1000 punti con numeri primi</a></li>
+            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/Canvas con 10000 punti di numeri primi.html">FlipCard</a></li>
+            <li><a class="dropdown-item" href="https://Michele-Piazzolla.github.io/TPSIT/replit/MathRandom.html">MathRandom</a></li>
+
+     
+          </ul>
         </li>        
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
